--- a/bin/build
+++ b/bin/build
@@ -1,3 +1,12 @@
-#!/bin/bash
+#!/usr/bin/env bash
 
-bin/run --target=linux --build "$@"
+set -euo pipefail
+
+readonly root_dir="$(pwd)"
+readonly build_tool="src/build/host"
+readonly args=("$@")
+
+echo "Building build tool..."
+cargo build -q --manifest-path="${build_tool}/Cargo.toml"
+
+exec "${root_dir}/target/debug/host" "${args[@]}"
