--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-version: '3.8'
 services:
   arma_server:
     build: .
@@ -21,6 +20,7 @@ services:
     environment:
       MYSQL_ROOT_PASSWORD: password12345
     command: >
+      --mysql-native-password=ON
       --character-set-server=utf8mb4
       --collation-server=utf8mb4_unicode_ci
     ports:
