--- a/bin/build
+++ b/bin/build
@@ -6,7 +6,7 @@ readonly root_dir="$(pwd)"
 readonly build_tool="src/build/host"
 readonly args=("$@")
 
-echo "Building build tool..."
+echo "<esm_bt> - Checking build tool..."
 cargo build -q --manifest-path="${build_tool}/Cargo.toml"
 
 exec "${root_dir}/target/debug/host" "${args[@]}"
