--- a/src/esm/Cargo.toml
+++ b/src/esm/Cargo.toml
@@ -15,30 +15,30 @@ crate-type = ["cdylib", "rlib"]
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-arma-rs = { version = "1", features = ["uuid", "serde_json", "chrono"] }
-chrono = { version = "0", features = ["serde"] }
-harsh = "0"
-lazy_static = "1"
-log = "*"
-log4rs = "*"
-message-io = { version = "0", default-features = false, features = ["tcp"] }
-mysql_async = "0"
-parking_lot = { version = "0", features = ["serde", "deadlock_detection"] }
-rand = "*"
-rust-ini = "0"
-serde = { version = "1", features = ["derive"] }
-serde_json = "1"
-serde_yaml = "0"
-serde_repr = "0"
-serde_derive = "1"
-tokio = { version = "1", features = ["full"] }
-uuid = { version = "1", features = ["serde", "v4", "fast-rng"] }
-openssl = "0"
-base64 = "0"
-flate2 = "1"
-num-format = "0"
-unicode-segmentation = "1"
-regex = "1"
+arma-rs = { version = "1.11", features = ["uuid", "serde_json", "chrono"] }
+chrono = { version = "0.4", features = ["serde"] }
+harsh = "0.2"
+lazy_static = "1.5"
+log = "0.4"
+log4rs = "1.3"
+message-io = { version = "0.18", default-features = false, features = ["tcp"] }
+mysql_async = "0.34"
+parking_lot = { version = "0.12", features = ["serde", "deadlock_detection"] }
+rand = "0.8"
+rust-ini = "0.21"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
+serde_yaml = "0.9"
+serde_repr = "0.1"
+serde_derive = "1.0"
+tokio = { version = "1.4", features = ["full"] }
+uuid = { version = "1.1", features = ["serde", "v4", "fast-rng"] }
+openssl = "0.10"
+base64 = "0.22"
+flate2 = "1.0"
+num-format = "0.4"
+unicode-segmentation = "1.12"
+regex = "1.1"
 
 [dev-dependencies]
 pretty_assertions = "1"
