Started migrating files

--- a/src/@esm/constants.yml
+++ b/src/@esm/constants.yml
@@ -1,14 +1,93 @@
+######################################
+# Testing examples, do not modify!
+EXAMPLE_STRING: "Hello world!"
+EXAMPLE_NUMBER: 69
+EXAMPLE_BOOL: false
+
+######################################
+# General
+ACK: "ack"
+CALL: "call"
+
+######################################
+# Territory
 FLAG_OK: 0
 FLAG_STOLEN: 1
+
 TERRITORY_BUILDER_RIGHTS: 1
 TERRITORY_ACCESS_NONE: 0
 TERRITORY_ACCESS_BUILDER: 1
 TERRITORY_ACCESS_MODERATOR: 2
 TERRITORY_ACCESS_OWNER: 3
-ACK: "ack"
-CALL: "call"
 
-# Testing examples, do not modify!
-EXAMPLE_STRING: "Hello world!"
-EXAMPLE_NUMBER: 69
-EXAMPLE_BOOL: false
+######################################
+# Dialogs IDs
+IDD_ITEM_DIALOG: 24037
+
+######################################
+# Element IDs
+IDC_ITEM_DIALOG_CAPTION_LEFT: 4000
+IDC_ITEM_DIALOG_BACKGROUND_LEFT: 4001
+IDC_ITEM_DIALOG_BACKGROUND_MIDDLE: 4002
+IDC_ITEM_DIALOG_CAPTION_MIDDLE: 4003
+IDC_ITEM_DIALOG_PLAYER_MONEY: 4004
+IDC_ITEM_DIALOG_CLOSE_CROSS: 4005
+IDC_ITEM_DIALOG_INVENTORY_LIST: 4006
+IDC_ITEM_DIALOG_INVENTORY_DROPDOWN: 4007
+IDC_ITEM_DIALOG_CANCEL_BUTTON: 4008
+IDC_ITEM_DIALOG_STORE_LIST: 4009
+IDC_ITEM_DIALOG_STORE_DROPDOWN: 4010
+IDC_ITEM_DIALOG_REDEEM_BUTTON: 4011
+IDC_ITEM_DIALOG_BACKGROUND_PLAYER_LOAD: 4012
+IDC_ITEM_DIALOG_PROGRESS_PLAYER_LOAD: 4013
+IDC_ITEM_DIALOG_LOAD_LABEL: 4014
+IDC_ITEM_DIALOG_LOAD_VALUE: 4015
+IDC_ITEM_DIALOG_FILTER_DROPDOWN: 4016
+
+######################################
+# Trading response codes
+TRADING_RESPONSE_OK: 0
+TRADING_RESPONSE_INVALID_PLAYER: 1
+TRADING_RESPONSE_DEAD_PLAYER: 2
+TRADING_RESPONSE_INVALID_OBJECT_CLASS: 3
+TRADING_RESPONSE_INVALID_SALES_PRICE: 4
+TRADING_RESPONSE_POOR_PLAYER: 5
+TRADING_RESPONSE_INVALID_VEHICLE: 6
+TRADING_RESPONSE_INVALID_VEHICLE_CUSTOMS: 7
+TRADING_RESPONSE_INVALID_CONTAINER: 8
+TRADING_RESPONSE_NO_SPACE: 9
+TRADING_RESPONSE_ITEM_NOT_OWNED: 10
+TRADING_RESPONSE_INVALID_PIN: 11
+TRADING_RESPONSE_MUTEX: 12
+TRADING_RESPONSE_BIS_FNC_SAFE_POS_FAIL: 13
+TRADING_RESPONSE_NOT_ENOUGH_RESPECT: 14
+
+######################################
+# Trade container
+TRADE_CONTAINER_EQUIPMENT: 1
+TRADE_CONTAINER_UNIFORM: 2
+TRADE_CONTAINER_VEST: 3
+TRADE_CONTAINER_BACKPACK: 4
+TRADE_CONTAINER_VEHICLE: 5
+
+######################################
+# Item quality
+QUALITY_LEVEL_1: 1
+QUALITY_LEVEL_2: 2
+QUALITY_LEVEL_3: 3
+QUALITY_LEVEL_4: 4
+QUALITY_LEVEL_5: 5
+QUALITY_LEVEL_6: 6
+
+######################################
+# Color
+COLOR_WHITE_ARRAY: [ 1, 1, 1, 1 ]
+
+COLOR_RED_ARRAY_SUBTLE: [ 0.91, 0, 0, 0.6 ]
+
+COLOR_QUALITY_LEVEL_1: [ 1, 1, 1, 1 ]
+COLOR_QUALITY_LEVEL_2: [ 0.62, 0.87, 0.23, 1 ]
+COLOR_QUALITY_LEVEL_3: [ 0, 0.78, 0.92, 1 ]
+COLOR_QUALITY_LEVEL_4: [ 0.62, 0.27, 0.58, 1 ]
+COLOR_QUALITY_LEVEL_5: [ 1, 0.7, 0.09, 1 ]
+COLOR_QUALITY_LEVEL_6: [ 0.93, 0, 0.48, 1 ]
