Redeem item loop

--- a/src/@esm/constants.yml
+++ b/src/@esm/constants.yml
@@ -61,6 +61,7 @@ TRADING_RESPONSE_INVALID_PIN: 11
 TRADING_RESPONSE_MUTEX: 12
 TRADING_RESPONSE_BIS_FNC_SAFE_POS_FAIL: 13
 TRADING_RESPONSE_NOT_ENOUGH_RESPECT: 14
+TRADING_RESPONSE_INVALID_REWARD_TYPE: 15
 
 ######################################
 # Trade container
