initial vehicle code

--- a/src/@esm/constants.yml
+++ b/src/@esm/constants.yml
@@ -23,9 +23,11 @@ TERRITORY_ACCESS_OWNER: 3
 ######################################
 # Dialogs IDs
 IDD_ITEM_DIALOG: 24037
+IDD_VEHICLE_DIALOG: 24038
 
 ######################################
 # Element IDs
+# Item redeem
 IDC_ITEM_DIALOG_CAPTION_LEFT: 4000
 IDC_ITEM_DIALOG_BACKGROUND_LEFT: 4001
 IDC_ITEM_DIALOG_BACKGROUND_MIDDLE: 4002
@@ -43,6 +45,33 @@ IDC_ITEM_DIALOG_PROGRESS_PLAYER_LOAD: 4013
 IDC_ITEM_DIALOG_LOAD_LABEL: 4014
 IDC_ITEM_DIALOG_LOAD_VALUE: 4015
 IDC_ITEM_DIALOG_FILTER_DROPDOWN: 4016
+
+# Vehicle redeem
+IDC_VEHICLE_DIALOG_BACKGROUND: 4000
+IDC_VEHICLE_DIALOG_TITLE: 4001
+IDC_VEHICLE_DIALOG_CANCEL_BACKGROUND: 4002
+IDC_VEHICLE_DIALOG_CATEGORY_DROP_DOWN: 4003
+IDC_VEHICLE_DIALOG_VEHICLES_LIST_BOX: 4004
+IDC_VEHICLE_DIALOG_BUTTON_REDEEM: 4005
+IDC_VEHICLE_DIALOG_CANCEL_BUTTON: 4006
+IDC_VEHICLE_DIALOG_PIN_BOX: 4007
+IDC_VEHICLE_DIALOG_PIN_TEXT: 4008
+IDC_VEHICLE_DIALOG_STAT01_BACKGROUND: 4009
+IDC_VEHICLE_DIALOG_STAT01_PROGRESS: 4010
+IDC_VEHICLE_DIALOG_STAT01_LABEL: 4011
+IDC_VEHICLE_DIALOG_STAT01_VALUE: 4012
+IDC_VEHICLE_DIALOG_STAT02_BACKGROUND: 4013
+IDC_VEHICLE_DIALOG_STAT02_PROGRESS: 4014
+IDC_VEHICLE_DIALOG_STAT02_LABEL: 4015
+IDC_VEHICLE_DIALOG_STAT02_VALUE: 4016
+IDC_VEHICLE_DIALOG_STAT03_BACKGROUND: 4017
+IDC_VEHICLE_DIALOG_STAT03_PROGRESS: 4018
+IDC_VEHICLE_DIALOG_STAT03_LABEL: 4019
+IDC_VEHICLE_DIALOG_STAT03_VALUE: 4020
+IDC_VEHICLE_DIALOG_STAT04_BACKGROUND: 4021
+IDC_VEHICLE_DIALOG_STAT04_PROGRESS: 4022
+IDC_VEHICLE_DIALOG_STAT04_LABEL: 4023
+IDC_VEHICLE_DIALOG_STAT04_VALUE: 4024
 
 ######################################
 # Trading response codes
@@ -63,6 +92,7 @@ TRADING_RESPONSE_BIS_FNC_SAFE_POS_FAIL: 13
 TRADING_RESPONSE_NOT_ENOUGH_RESPECT: 14
 TRADING_RESPONSE_INVALID_REWARD_TYPE: 15
 TRADING_RESPONSE_INVALID_REWARD: 16
+TRADING_RESPONSE_NONE_LEFT: 17
 
 ######################################
 # Trade container
