--- a/src/constants.yml
+++ b/src/constants.yml
@@ -3,6 +3,7 @@
 EXAMPLE_STRING: "Hello world!"
 EXAMPLE_NUMBER: 69
 EXAMPLE_BOOL: false
+EXAMPLE_ARRAY: [ 1, 2, 3 ]
 
 ######################################
 # General
@@ -21,6 +22,15 @@ TERRITORY_ACCESS_MODERATOR: 2
 TERRITORY_ACCESS_OWNER: 3
 
 ######################################
+# UI Stuff
+GUI_GRID_X: 0
+GUI_GRID_Y: 0
+GUI_GRID_W: 0.025
+GUI_GRID_H: 0.04
+GUI_GRID_WAbs: 1
+GUI_GRID_HAbs: 1
+
+######################################
 # Dialogs IDs
 IDD_ITEM_DIALOG: 24037
 IDD_VEHICLE_DIALOG: 24038
@@ -32,46 +42,61 @@ IDC_ITEM_DIALOG_CAPTION_LEFT: 4000
 IDC_ITEM_DIALOG_BACKGROUND_LEFT: 4001
 IDC_ITEM_DIALOG_BACKGROUND_MIDDLE: 4002
 IDC_ITEM_DIALOG_CAPTION_MIDDLE: 4003
-IDC_ITEM_DIALOG_PLAYER_MONEY: 4004
-IDC_ITEM_DIALOG_CLOSE_CROSS: 4005
-IDC_ITEM_DIALOG_INVENTORY_LIST: 4006
-IDC_ITEM_DIALOG_INVENTORY_DROPDOWN: 4007
-IDC_ITEM_DIALOG_CANCEL_BUTTON: 4008
-IDC_ITEM_DIALOG_STORE_LIST: 4009
-IDC_ITEM_DIALOG_STORE_DROPDOWN: 4010
-IDC_ITEM_DIALOG_REDEEM_BUTTON: 4011
-IDC_ITEM_DIALOG_BACKGROUND_PLAYER_LOAD: 4012
-IDC_ITEM_DIALOG_PROGRESS_PLAYER_LOAD: 4013
-IDC_ITEM_DIALOG_LOAD_LABEL: 4014
-IDC_ITEM_DIALOG_LOAD_VALUE: 4015
-IDC_ITEM_DIALOG_FILTER_DROPDOWN: 4016
+IDC_ITEM_DIALOG_PLAYER_NAME: 4004
+IDC_ITEM_DIALOG_PLAYER_MONEY: 4005
+IDC_ITEM_DIALOG_CLOSE_CROSS: 4006
+IDC_ITEM_DIALOG_INVENTORY_LIST: 4007
+IDC_ITEM_DIALOG_INVENTORY_DROPDOWN: 4008
+IDC_ITEM_DIALOG_CANCEL_BUTTON: 4009
+IDC_ITEM_DIALOG_STORE_LIST: 4010
+IDC_ITEM_DIALOG_STORE_DROPDOWN: 4011
+IDC_ITEM_DIALOG_REDEEM_BUTTON: 4012
+IDC_ITEM_DIALOG_BACKGROUND_PLAYER_LOAD: 4013
+IDC_ITEM_DIALOG_PROGRESS_PLAYER_LOAD: 4014
+IDC_ITEM_DIALOG_LOAD_LABEL: 4015
+IDC_ITEM_DIALOG_LOAD_VALUE: 4016
+IDC_ITEM_DIALOG_FILTER_DROPDOWN: 4017
+IDC_ITEM_DIALOG_PRIMARY_WEAPON_FILTER: 4018
+IDC_ITEM_DIALOG_HANDGUN_FILTER: 4019
+IDC_ITEM_DIALOG_QUANTITY_DROPDOWN: 4020
+IDC_ITEM_DIALOG_PLAYER_LOAD_LABEL: 4021
+IDC_ITEM_DIALOG_PLAYER_LOAD_VALUE: 4022
+IDC_ITEM_DIALOG_PLAYER_LOAD_PROGRESS: 4023
 
 # Vehicle redeem
 IDC_VEHICLE_DIALOG_BACKGROUND: 4000
 IDC_VEHICLE_DIALOG_TITLE: 4001
 IDC_VEHICLE_DIALOG_CANCEL_BACKGROUND: 4002
-IDC_VEHICLE_DIALOG_CATEGORY_DROP_DOWN: 4003
-IDC_VEHICLE_DIALOG_VEHICLES_LIST_BOX: 4004
-IDC_VEHICLE_DIALOG_BUTTON_REDEEM: 4005
+IDC_VEHICLE_DIALOG_CATEGORY_DROPDOWN: 4003
+IDC_VEHICLE_DIALOG_VEHICLES_LIST: 4004
+IDC_VEHICLE_DIALOG_REDEEM_BUTTON: 4005
 IDC_VEHICLE_DIALOG_CANCEL_BUTTON: 4006
 IDC_VEHICLE_DIALOG_PIN_BOX: 4007
 IDC_VEHICLE_DIALOG_PIN_TEXT: 4008
-IDC_VEHICLE_DIALOG_STAT01_BACKGROUND: 4009
-IDC_VEHICLE_DIALOG_STAT01_PROGRESS: 4010
-IDC_VEHICLE_DIALOG_STAT01_LABEL: 4011
-IDC_VEHICLE_DIALOG_STAT01_VALUE: 4012
-IDC_VEHICLE_DIALOG_STAT02_BACKGROUND: 4013
-IDC_VEHICLE_DIALOG_STAT02_PROGRESS: 4014
-IDC_VEHICLE_DIALOG_STAT02_LABEL: 4015
-IDC_VEHICLE_DIALOG_STAT02_VALUE: 4016
-IDC_VEHICLE_DIALOG_STAT03_BACKGROUND: 4017
-IDC_VEHICLE_DIALOG_STAT03_PROGRESS: 4018
-IDC_VEHICLE_DIALOG_STAT03_LABEL: 4019
-IDC_VEHICLE_DIALOG_STAT03_VALUE: 4020
-IDC_VEHICLE_DIALOG_STAT04_BACKGROUND: 4021
-IDC_VEHICLE_DIALOG_STAT04_PROGRESS: 4022
-IDC_VEHICLE_DIALOG_STAT04_LABEL: 4023
-IDC_VEHICLE_DIALOG_STAT04_VALUE: 4024
+IDC_VEHICLE_DIALOG_PIN_EDIT: 4009
+IDC_VEHICLE_DIALOG_STAT01_BACKGROUND: 4010
+IDC_VEHICLE_DIALOG_STAT01_PROGRESS: 4011
+IDC_VEHICLE_DIALOG_STAT01_LABEL: 4012
+IDC_VEHICLE_DIALOG_STAT01_VALUE: 4013
+IDC_VEHICLE_DIALOG_STAT02_BACKGROUND: 4014
+IDC_VEHICLE_DIALOG_STAT02_PROGRESS: 4015
+IDC_VEHICLE_DIALOG_STAT02_LABEL: 4016
+IDC_VEHICLE_DIALOG_STAT02_VALUE: 4017
+IDC_VEHICLE_DIALOG_STAT03_BACKGROUND: 4018
+IDC_VEHICLE_DIALOG_STAT03_PROGRESS: 4019
+IDC_VEHICLE_DIALOG_STAT03_LABEL: 4020
+IDC_VEHICLE_DIALOG_STAT03_VALUE: 4021
+IDC_VEHICLE_DIALOG_STAT04_BACKGROUND: 4022
+IDC_VEHICLE_DIALOG_STAT04_PROGRESS: 4023
+IDC_VEHICLE_DIALOG_STAT04_LABEL: 4024
+IDC_VEHICLE_DIALOG_STAT04_VALUE: 4025
+
+# Stats
+# I have no idea why Exile devs picked these numbers
+STAT_VEHICLE_SPEED_MAX: 1059
+STAT_VEHICLE_LOAD_MAX: 6000
+STAT_VEHICLE_ARMOR_MAX: 5000
+STAT_VEHICLE_FUEL_MAX: 4500
 
 ######################################
 # Trading response codes
@@ -114,7 +139,6 @@ QUALITY_LEVEL_6: 6
 ######################################
 # Color
 COLOR_WHITE_ARRAY: [ 1, 1, 1, 1 ]
-
 COLOR_RED_ARRAY_SUBTLE: [ 0.91, 0, 0, 0.6 ]
 
 COLOR_QUALITY_LEVEL_1: [ 1, 1, 1, 1 ]
@@ -123,3 +147,10 @@ COLOR_QUALITY_LEVEL_3: [ 0, 0.78, 0.92, 1 ]
 COLOR_QUALITY_LEVEL_4: [ 0.62, 0.27, 0.58, 1 ]
 COLOR_QUALITY_LEVEL_5: [ 1, 0.7, 0.09, 1 ]
 COLOR_QUALITY_LEVEL_6: [ 0.93, 0, 0.48, 1 ]
+
+COLOR_QUALITY_LEVEL_1_HEX: "#ffffff"
+COLOR_QUALITY_LEVEL_2_HEX: "#9EDD3A"
+COLOR_QUALITY_LEVEL_3_HEX: "#00c8ec"
+COLOR_QUALITY_LEVEL_4_HEX: "#9F4796"
+COLOR_QUALITY_LEVEL_5_HEX: "#ffb418"
+COLOR_QUALITY_LEVEL_6_HEX: "#ec007a"
